--- a/Haus/Haus.vcxproj.filters
+++ b/Haus/Haus.vcxproj.filters
@@ -107,5 +107,8 @@
     <ClInclude Include="UserView.h">
       <Filter>Header Files\Views</Filter>
     </ClInclude>
+    <ClInclude Include="Haus.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
